首页图片管理

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
 .idea
+dist
 .project
 .vscode
 *.suo
@@ -34,3 +35,4 @@ node_modules
 *.sln
 *.zip
 *.rar
+*.xml
