--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "mint-ui": "^2.2.13",
+    "qiniu-js": "^2.5.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
